***********************************
CHANGES IN VERSION 2.7.7

NEW FEATURES

   o New utility : sparseToDense.py - Convert a sparse symmetric matrix file in dense format for further analysis

   o Pull request from J. Brayet for installation process

SIGNIFICANT USER-VISIBLE CHANGES

   o Update of the manual

   o Check python module version during installation
   
   o Pull request NV - udpate iced version. Note that this version of iced rescales automatically the normalized matrix such that the total number of counts is identical to the original matrix.

   o Add -c option in hicpro2juicebox.sh utils to write the "chr" prefix before the chromosome name. The use of "chr" depends on the reference genome of juicebox.

***********************************
CHANGES IN VERSION 2.7.6

NEW FEATURES

   o New utils : hicpro2juicebox. HiC-Pro results can now be converted in Juicebox input for visualization (A. Barrera, N. Servant)

   o New utils : make_viewpoints.py. Allow to generate viewpoint from the list of valid interaction products. Initially developed for capture-C analysis

SIGNIFICANT USER-VISIBLE CHANGES

   o validPairs output format was updated for Juicebox compatibility. New columns were added with restriction fragment names and mapping quality

BUG FIXES

   o Fix bug in hic_inc.sh for numeric comparison

   o Fix bug in bam/sam extension removal

***********************************
CHANGES IN VERSION 2.7.4

NEW FEATURES

    o Support for LSF scheduler thanks to J. Phlipps-Cremins

SIGNIFICANT USER-VISIBLE CHANGES

    o Update singleton reporting in pairing mode (pull request N. Varoquaux, F. Ay)

    o Additional checks on input files to report more "user-friendly" errors

BUG FIXES

    o Fix bugs in singleton and multiple hits reporting

    o Fix bug when fastq.gz files are processed without parallel mode but using a cluster

***********************************
CHANGES IN VERSION 2.7.3b

BUG FIXES

   o Bug fixed if space in the configuration file
