@@ -25,12 +25,11 @@ function help {
     echo "OPTIONS"
     echo
     echo "   -i|--input VALIDPAIRS : allValidPairs file generated by HiC-Pro >= 2.7.5"
-    echo "   -g|--genome GENOME : genome information required by Juicebox, must be one of hg18, hg19, hg38, dMel, mm9, mm10, anasPlat1, bTaurus3, canFam3, equCab2, galGal4, Pf3D7, sacCer3, sCerS288c, susScr3, or TAIR10"
+    echo "   -g|--gsize GSIZE : genome size file used during HiC-Pro processing"
     echo "   -j|--jar JUICEBOXJAR : path to juicebox_clt.jar file"
     echo "   [-r|--resfrag] RESFRAG : restriction fragment file used by HiC-Pro"
     echo "   [-t|--temp] TEMP : path to tmp folder. Default is current path"
     echo "   [-o|--out] OUT : output path. Default is current path"
-    echo "   [-c|--chr] CHR : write chromosome name with the 'chr' extension. This depend of the reference genome used by juicebox"
     echo "   [-h|--help]: help"
     exit;
 }
@@ -52,7 +51,6 @@ for arg in "$@"; do
       "--resfrag") set -- "$@" "-r" ;;
       "--temp")   set -- "$@" "-t" ;;
       "--out")   set -- "$@" "-o" ;;
-      "--chr") set -- "$@" "-c" ;;
       "--help")   set -- "$@" "-h" ;;
        *)        set -- "$@" "$arg"
   esac
@@ -60,22 +58,20 @@ done
 
 VALIDPAIRS=""
 RESFRAG=""
-GENOME=""
+GSIZE=""
 JUICEBOXJAR=""
 TEMP="./tmp"
 OUT="./"
-CHRNAME=0
 
 while getopts ":i:r:g:j:t:o:ch" OPT
 do
     case $OPT in
 	i) VALIDPAIRS=$OPTARG;;
-	g) GENOME=$OPTARG;;
+	g) GSIZE=$OPTARG;;
 	j) JUICEBOXJAR=$OPTARG;;
 	r) RESFRAG=$OPTARG;;
 	t) TEMP=$OPTARG;;
 	o) OUT=$OPTARG;;
-	c) CHRNAME=1;;
 	h) help ;;
 	\?)
 	    echo "Invalid option: -$OPTARG" >&2
@@ -90,7 +86,7 @@ do
     esac
 done
 
-if [[ -z $VALIDPAIRS || -z $GENOME || -z $JUICEBOXJAR ]]; then
+if [[ -z $VALIDPAIRS || -z $GSIZE || -z $JUICEBOXJAR ]]; then
     usage
     exit
 fi
@@ -119,17 +115,9 @@ if [[ ! -z $RESFRAG ]]; then
     
 ## The “pre” command needs the contact map to be sorted by chromosome and grouped so that all reads for one chromosome (let’s say, chr1) appear in the same column.
 ## Also, chromosomes should not have the ‘chr” substring and the strand is coded as 0 for positive and anything else for negative (in practice, 1).
-    if [[ $CHRNAME -eq 0 ]];then
-	awk '$2=="chrM"{$2="chrMT"}$5=="chrM"{$5="chrMT"}{$4=$4!="+"; $7=$7!="+"; sub(/chr/, "", $2); sub(/chr/, "", $5); split($9, frag1, "_"); split($10, frag2, "_"); } $2<=$5{print $1, $4, $2, $3, frag1[3], $7, $5, $6, frag2[3], $11, $12 }$5<$2{ print $1, $7, $5, $6, frag2[3], $4, $2, $3, frag1[3], $12, $11 }' $VALIDPAIRS | sort -k3,3d  -k7,7d -S 90 > ${TEMP}/$$_allValidPairs.pre_juicebox_sorted
-    else
-	awk '$2=="chrM"{$2="chrMT"}$5=="chrM"{$5="chrMT"}{$4=$4!="+"; $7=$7!="+"; sub(/chr/, "", $2); sub(/chr/, "", $5); split($9, frag1, "_"); split($10, frag2, "_"); } $2<=$5{print $1, $4, "chr"$2, $3, frag1[3], $7, "chr"$5, $6, frag2[3], $11, $12 }$5<$2{ print $1, $7, "chr"$5, $6, frag2[3], $4, "chr"$2, $3, frag1[3], $12, $11}' $VALIDPAIRS | sort -k3,3d  -k7,7d -S 90 > ${TEMP}/$$_allValidPairs.pre_juicebox_sorted
-    fi
+    awk '$2=="chrM"{$2="chrMT"}$5=="chrM"{$5="chrMT"}{$4=$4!="+"; $7=$7!="+"; sub(/chr/, "", $2); sub(/chr/, "", $5); split($9, frag1, "_"); split($10, frag2, "_"); } $2<=$5{print $1, $4, "chr"$2, $3, frag1[3], $7, "chr"$5, $6, frag2[3], $11, $12 }$5<$2{ print $1, $7, "chr"$5, $6, frag2[3], $4, "chr"$2, $3, frag1[3], $12, $11}' $VALIDPAIRS | sort -k3,3d  -k7,7d -S 90 > ${TEMP}/$$_allValidPairs.pre_juicebox_sorted
 else
-    if [[ $CHRNAME -eq 0 ]];then
-	awk '$2=="chrM"{$2="chrMT"}$5=="chrM"{$5="chrMT"}{$4=$4!="+"; $7=$7!="+"; sub(/chr/, "", $2); sub(/chr/, "", $5)} $2<=$5{print $1, $4, $2, $3, 0, $7, $5, $6, 1, $11, $12 }$5<$2{ print $1, $7, $5, $6, 0, $4, $2, $3, 1, $12, $11 }' $VALIDPAIRS | sort -k3,3d  -k7,7d -S 90 > ${TEMP}/$$_allValidPairs.pre_juicebox_sorted
-    else
-	awk '$2=="chrM"{$2="chrMT"}$5=="chrM"{$5="chrMT"}{$4=$4!="+"; $7=$7!="+"; sub(/chr/, "", $2); sub(/chr/, "", $5)} $2<=$5{print $1, $4, "chr"$2, $3, 0, $7, "chr"$5, $6, 1, $11, $12 }$5<$2{ print $1, $7,"chr"$5, $6, 0, $4, "chr"$2, $3, 1, $12, $11 }' $VALIDPAIRS | sort -k3,3d  -k7,7d -S 90 > ${TEMP}/$$_allValidPairs.pre_juicebox_sorted
-    fi
+    awk '$2=="chrM"{$2="chrMT"}$5=="chrM"{$5="chrMT"}{$4=$4!="+"; $7=$7!="+"; sub(/chr/, "", $2); sub(/chr/, "", $5)} $2<=$5{print $1, $4, "chr"$2, $3, 0, $7, "chr"$5, $6, 1, $11, $12 }$5<$2{ print $1, $7,"chr"$5, $6, 0, $4, "chr"$2, $3, 1, $12, $11 }' $VALIDPAIRS | sort -k3,3d  -k7,7d -S 90 > ${TEMP}/$$_allValidPairs.pre_juicebox_sorted
 fi
 
 echo -e "Running Juicebox ..."
@@ -138,9 +126,9 @@ OUTPUTFILE=${OUT}/$(basename $VALIDPAIRS).hic
 ## This is the command to generate the hic file that can be visualized with Juicebox with restriction fragment information
 
 if [[ ! -z $RESFRAG ]]; then
-    java -jar ${JUICEBOXJAR} pre -f ${TEMP}/$$_resfrag.juicebox ${TEMP}/$$_allValidPairs.pre_juicebox_sorted ${OUTPUTFILE} ${GENOME}
+    java -jar ${JUICEBOXJAR} pre -f ${TEMP}/$$_resfrag.juicebox ${TEMP}/$$_allValidPairs.pre_juicebox_sorted ${OUTPUTFILE} ${GSIZE}
 else
-    java -jar ${JUICEBOXJAR} pre ${TEMP}/$$_allValidPairs.pre_juicebox_sorted ${OUTPUTFILE} ${GENOME}
+    java -jar ${JUICEBOXJAR} pre ${TEMP}/$$_allValidPairs.pre_juicebox_sorted ${OUTPUTFILE} ${GSIZE}
 fi
 
 ## Clean
